--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- 10120201 - Ilham Ramdhan Putra Lesmana - IF5 -->
 <resources>
 	<!-- splash_screen strings -->
-
-	<string name="app_name">Page 1</string>
-	<string name="ek_img_content">ExportKit Image</string>
 	<string name="labelmulai_string">MULAI</string>
 	<string name="selamat_datang_di_tulis_string">Selamat Datang Di TuLis</string>
 	<string name="melakukan_tugas_harian_dengan_tulis_string">Melakukan tugas harian dengan TuLis</string>
@@ -36,4 +34,9 @@
 	<string name="judulketeranganaplikasi_string">TuLis</string>
 	<string name="labelketeranganaplikasi_string">Aplikasi ini dibangun untuk membantu pengguna membuat daftar catatan harian.Yang dimana bisa menambah, mengubah dan menghapus daftar catatan harian </string>
 	<string name="tombolkembalisplash_string">&lt; Halaman Awal</string>
+
+	<!--Navbar -->
+	<string name="profilmahasiswa">Profile</string>
+	<string name="list">List</string>
+	<string name="keteranganaplikasi">Informasi</string>
 </resources>
